--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,14 @@
 	        <artifactId>spring-boot-starter-web</artifactId>
 	    </dependency>
 	    
+	    <!-- 分页插件PageHelper -->
+	    <dependency>
+	        <groupId>com.github.pagehelper</groupId>
+	        <artifactId>pagehelper</artifactId>
+	        <version>3.7.6</version>
+	    </dependency>
+	    
+	    
 	    <dependency>
 	    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-devtools</artifactId>
