--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,13 @@ server.port=8086
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/music?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 # mybatis 
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
 #配置mybatis日志信息
 logging.level.com.lanqiao.mapper=debug
-
 #上传文件总的最大值
 spring.http.multipart.maxFileSize=1024MB
 
